Fix some issue with modular jdk under jdk 9+ Fix failing tests after library updates